@@ -1,3 +1,8 @@
+2003-09-03  Ulrich Drepper  <drepper@redhat.com>
+
+	* nss/getXXbyYY_r.c (INTERNAL): Explicitly set errno and avoid
+	returning ERANGE if this wasn't intended.
+
 2003-09-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* intl/loadmsgcat.c (open, close, read, mmap, munmap): Define as
